COD-97: fix: layout for preventing text overflow

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body {
   background-color: var(--yellow);
   font-size: 1rem;
   font-family: 'Figtree', sans-serif;
-  overflow: hidden;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -58,7 +57,10 @@ body {
 .post-description {
   color: var(--grey);
   line-height: 1.5rem;
-  max-height: 10rem;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .learning, h1 {
@@ -68,14 +70,17 @@ body {
 h1 {
   font-size: 1.5rem;
   cursor: pointer;
-  max-height: 5rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 25rem;
 }
 
 h1:hover {
   color: var(--yellow);
 }
 
-.post-data {
+.post-date {
   font-weight: 600;
   margin-bottom: 1.25rem;
 }
@@ -88,23 +93,12 @@ h1:hover {
   font-weight: 800;
 }
 
-.post-description, .learning, .avatar-wrapper, h1, .post-data {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%;
-}
-
-.post-data, .avatar-wrapper, .learning {
-  max-height: 3rem;
-}
-
 .avatar-image {
   width: 2rem;
 }
 
 @media screen and (min-width: 700px) {
   .container {
-    margin: 0 auto;
     max-width: 25rem;
   }
 }
